--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "^17.0.7",
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.5",
     "expo-splash-screen": "~0.30.10",
@@ -30,10 +31,10 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-native-safe-area-context": "5.4.0",
-    "expo-image-picker": "~16.1.4"
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
