--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "expo": "^53.0.24",
+    "expo": "~53.0.25",
     "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.7",
+    "expo-constants": "~17.1.8",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.7",
+    "expo-router": "~5.1.10",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
